<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyInfoWeather</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="weather_title">Sun</string>
    <string name="weather_temp">-25 °C</string>
    <string name="weather_max_temp">25 °C</string>
    <string name="weather_min_temp">25 °C</string>
    <string name="weather_description">Description</string>
    <string name="weather_additional_data_text">Extra Data</string>
    <string name="weather_humidity">Humidicity:</string>
    <string name="weather_pressure">Pressure</string>
    <string name="weather_city">City</string>
    <string name="btn_search_city">Search</string>
    <string name="weather_city_edit_text_hint">Type the city name</string>
    <string name="weather_current_location_title">Current Location</string>
    <string name="message_connection_failure_dialog">Unable to connect to the weather server</string>
    <string name="message_retry">Retry</string>
    <string name="message_cancel">Cancel</string>
    <string name="title_connection_failure_dialog">Alert</string>
    <string name="toast_invalid_city_name">Invalid city name, please try again</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="set_update_interval">Set Update interval</string>
    <string name="typeUpdateIntervalHint">Type update interval</string>
    <string name="update_interval">Update interval</string>
    <string name="message_close">Close</string>
    <string name="analog_name">analog</string>
    <string name="unavailable_location">"Unavailable location"</string>
    <string name="place_details">place details</string>
    <string name="notification_preference_title">Notification Interval</string>
    <string name="notification_preference_dialog_title">Select an interval</string>
    <string name="notification_preference_default_value">default</string>

</resources>
